Thu Mar 27 15:36:32 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* gssapi.hin: Add the GSS_C_PROT_READY_FLAG and GSS_C_TRANS_FLAG
		Add prototypes for the V2 functions gss_export_name(),
		gss_duplicate_name(), and gss_canonicalize_name().

Tue Mar 18 13:52:29 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* gssapi.hin: Add 'extern "C"' for C++ compatibility; also check
		for __cplusplus since some C++ compilers don't set
 		__STDC__

Mon Mar 17 14:42:33 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* gssapi.hin: Fix header file so that winmac.h is #included when
		compiling on the Macintosh.

Sat Feb 22 18:57:56 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use some of the new library list build rules in
		win-post.in

Sun Feb  9 11:41:08 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fix includes generation for unix after
	libhack_branch merge.

Thu Feb  6 11:11:17 1997  Ezra Peisach  (epeisach@mit.edu)

	* configure.in: Remove the CopyHeader and CopySrcHeader rules as
		they are handled in Makefile.in

	* Makefile.in: Create include/gssapi on unix. Make clean removes
		built gssapi.h

Wed Feb  5 23:28:47 1997  Richard Basch  <basch@lehman.com>

	* gssapi.hin: Make sure KRB5_EXPORTVAR is defined.

Tue Feb  4 15:55:11 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Only override the object build of the error table
		under Unix

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

	* gssapi.hin, gssapi_generic.c, gssapi_generic.h:
	DLL export all public gssapi functions; move windows/mac stuff to
	win-mac.h

Tue Jan 14 20:16:46 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Wed Nov 20 13:59:58 1996  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (install): Install gssapi.h from the build tree.

Tue Nov 19 16:43:16 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (gssapi.h): grep USE_.*_H out from autoconf.h as